data/diff_tests/wasmtime/nop_InfiniteLoops_282.wast
;; 3. **Test with `loop` containing multiple `nop` instructions and a `br_table`**:    - **Constraint**: Verifies if `nop` interspersed with `br_table` in a loop control structure is properly handled.    - **Relation to Infinite Loops**: If `nop` alters the jump table or the control flow, the loop may not exit as intended, leading to an infinite loop.

(assert_malformed
  (module
    (func (loop
      nop
      (br_table 0 0 (nop))
      nop
    ))
  )
  "invalid br_table targets"
)